<resources>
    <string name="app_name">GanBreakingBad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="error_connecting_to_server">Error connecting to server</string>
    <string name="character_fragment">Characters</string>
    <string name="character_fragment_detail">Character Info</string>
    <string name="occupation">occupation</string>
    <string name="status">status</string>
    <string name="nick_name">nick name</string>
    <string name="season_appearance">season appearance</string>
</resources>