<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".CharacterDetailFragment">

    <TextView
        android:id="@+id/hName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/hName"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/hOccupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/occupation"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/hOccupation"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/hStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/occupation"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/status"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/hStatus"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/hNickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nick_name"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/status"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/nickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nick_name"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/hNickName"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/hSeasonAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/season_appearance"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/nickName"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/seasonAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/season_appearance"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/hSeasonAppearance"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>